# nestandnook-site

./: .gitignore  CLAUDE_HANDOFF_VISUAL_STABILIZATION_2026-07-13.md  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.claude/: settings.json
.claude/hooks/: pretooluse.py
.github/workflows/: nookguard-ci.yml  nookguard-dashboard-ci.yml  nookguard-worker-ci.yml
_paused-content/blog/: i-signed-up-for-wheel-throwing-and-the-clay-won.md
_paused-content/reviews/: apartment-pet-starter-kit-under-150.md  best-wall-mounted-cat-shelves-for-small-apartments.md
content/: amazon-compliance-rules.json  page-success-scorecard.json  site-status.json
content/claim-evidence/: best-desk-lamps-for-eye-strain.json  best-space-saving-gadgets-for-small-kitchens.json  best-under-desk-footrests.json  desk-cable-management.json  ergonomic-home-office-setup-under-150.json  huanuo-ergonomic-footrest-review.json  small-home-office-setup-guide.json  small-kitchen-setup-guide.json
docs/nookguard/: BUILD-LOG.md  README.md  SPEC.md
nookguard/: __init__.py  agent_runner.py  aggregator.py  canon.py  cli.py  cli_reviewer.py  commit25_driver.py  contact_sheet.py  containment.py  dedup.py  deploy.py  exceptions.py  gen_public_media_baseline.py  gen_regression_images.py  hashing.py  hooks.py  ledger.py  manifest.py  modules.py  off_the_clock_schema.py  owner_queue.py  preview.py  preview_aggregator.py  production_verifier.py  prompt_compiler.py  public_media_baseline.json  public_media_guard.py  real_regression_fixtures.py  regression_corpus.py  regression_live.py  release.py  review_pack.py  run_report.py  schemas.py  state_machine.py  store.py  write_path_audit.py
nookguard-dashboard/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json
nookguard-worker/: README.md  package.json  wrangler.toml
nookguard-worker/migrations/: 0001_init.sql  0002_owner_queue.sql
nookguard-worker/src/: access.mjs  artifacts.mjs  db.mjs  enforce.mjs  index.mjs  ownerQueue.mjs  router.mjs
public/: _headers  robots.txt
scripts/: indexnow_ping.mjs  site-readiness-audit.mjs
src/: authors.ts  config.ts  hubs.ts
src/data/: tools.ts
(+245 files in other folders)
