[project]
name = "nookguard"
version = "0.1.0"
description = "Claude-only media reliability control plane for Nest & Nook"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mediactl = "nookguard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nookguard*"]
