[project]
name = "nookguard"
version = "0.1.0"
description = "Claude-only media reliability control plane for Nest & Nook"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "Pillow>=10.0",
    "gradio_client>=1.0",
    "anthropic>=0.60",
    "playwright>=1.40",
    # Commit 20: real OCR validator (validators/ocr.py). rapidocr-onnxruntime
    # is the primary backend -- pure Python/ONNX, no external system binary,
    # installs with no admin rights (confirmed on this machine; see
    # docs/nookguard/BUILD-LOG.md's Commit 20 entry for why pytesseract's
    # usual system-Tesseract pairing was not usable here). pytesseract is
    # kept as an optional alternate backend for a future environment where
    # Tesseract-OCR's system binary is installed.
    "rapidocr-onnxruntime>=1.3",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mediactl = "nookguard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nookguard*"]
